v25 DTA and DBD DC adjustments

--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -23,6 +23,16 @@
 ;}
 
 ; =====================================================
+; ==                RAGDOLL REMOVAL                  ==
+; ==   Remove prop_ragdoll entities for performance  ==
+; =====================================================
+; --- Ragdolls can cause CPU and networking performance issues, some custom campaigns over use them so just remove them
+filter:
+{
+	"classname" "prop_ragdoll"
+}
+
+; =====================================================
 ; ==                 ENTITY TYPE FIX                 ==
 ; ==     Fix entities using the wrong class type     ==
 ; =====================================================
