--- a/cfg/stripper/maps/cdta_01detour.cfg
+++ b/cfg/stripper/maps/cdta_01detour.cfg
@@ -292,6 +292,39 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
+; --- Block stuck spots in trees by the saferoom
+{
+	"classname" "env_physics_blocker"
+	"origin" "-706 3785 183"
+	"mins" "-38 -24 -103"
+	"maxs" "38 24 103"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-716 3821 137"
+	"mins" "-28 -12 -57"
+	"maxs" "28 12 57"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-579 3465 183"
+	"mins" "-21 -15 -103"
+	"maxs" "21 15 103"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-646 2395 183"
+	"mins" "-21 -15 -103"
+	"maxs" "21 15 103"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 ; --- Block a perma stuck spot in some rocks in the valley
 {
 	"classname" "env_physics_blocker"
