--- a/cfg/stripper/maps/cdta_04onarail.cfg
+++ b/cfg/stripper/maps/cdta_04onarail.cfg
@@ -505,6 +505,66 @@ add:
 ; ==       New props for balance and SI spawns       ==
 ; =====================================================
 add:
+; --- Barricade to block survivors from running back to the burning tanker by the saferoom (for tank fights and to prevent reproducable a crash in that area)
+{
+	"classname" "prop_dynamic"
+	"origin" "-11206 999 649"
+	"angles" "0 0 0"
+	"model" "models/props_street/police_barricade2.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-11206 1314 643"
+	"angles" "0 0 0"
+	"model" "models/props_street/police_barricade_496in.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-11206 1633 649"
+	"angles" "0 0 0"
+	"model" "models/props_street/police_barricade2.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-11206 1729 649"
+	"angles" "0 0 0"
+	"model" "models/props_street/police_barricade.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-11242 1375 1148"
+	"mins" "-38 -447 -524"
+	"maxs" "38 447 524"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-11342 2042 1148"
+	"mins" "-122 -221 -524"
+	"maxs" "122 221 524"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Infected ladder to climb over barricade
+{
+	"classname" "func_simpleladder"
+	"origin" "-14718 -593 -477.05"
+	"angles" "0 270 0"
+	"model" "*102"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
 ; --- One way drop at the trailer park entrance to prevent easy tank runbacks
 {
 	"classname" "prop_dynamic"
@@ -839,6 +899,20 @@ add:
 ; ==              TRIGGER REMOVAL / FIX              ==
 ; ==    Fix triggers that interfere with gameplay    ==
 ; =====================================================
+; --- Remove nav blockers that cover the entire 2nd half of the map
+filter:
+{
+	"targetname" "bridgenavblock1"
+}
+{
+	"targetname" "bridgenavblock2"
+}
+{
+	"targetname" "bridgenavblock3"
+}
+{
+	"targetname" "bridgenavblock4"
+}
 
 
 ; #############  LADDER CHANGES AND FIXES  ############
