--- a/cfg/stripper/maps/l4d_dbd2dc_anna_is_gone.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_anna_is_gone.cfg
@@ -841,35 +841,35 @@ add:
 	"BlockType" "1"
 }
 ; --- Disable the blocker temporarily while survivors on the other side of the fence
-{
-	"classname" "logic_auto"
-	"OnMapSpawn" "house_skip_blocker_trigger,AddOutput,mins -360 -319 -664,0,-1"
-	"OnMapSpawn" "house_skip_blocker_trigger,AddOutput,maxs 360 319 664,0,-1"
-	"OnMapSpawn" "house_skip_blocker_trigger,AddOutput,boxmins -360 -319 -664,0,-1"
-	"OnMapSpawn" "house_skip_blocker_trigger,AddOutput,boxmaxs 360 319 664,0,-1"
-	"OnMapSpawn" "house_skip_blocker_trigger,AddOutput,solid 2,0,-1"
-}
-{
-	"classname" "trigger_multiple"
-	"origin" "-1112 6624 168"
-	"targetname" "house_skip_blocker_trigger"
-	"filtername" "filter_survivor"
-	"spawnflags" "1"
-	"OnTrigger" "house_skip_blocker,Disable,,0,-1"
-	"OnNotTouching" "house_skip_blocker,Enable,,0,-1"
-}
-{
-	"classname" "filter_activator_team"
-	"targetname" "filter_survivor"
-	"Negated" "Allow entities that match criteria"
-	"filterteam" "2"
-}
-{
-	"classname" "logic_timer"
-	"targetname" "house_skip_blocker_timer"
-	"RefireTime" "2"
-	"OnTimer" "house_skip_blocker_trigger,TouchTest,,0,-1"
-}
+;{
+;	"classname" "logic_auto"
+;	"OnMapSpawn" "house_skip_blocker_trigger,AddOutput,mins -360 -319 -664,0,-1"
+;	"OnMapSpawn" "house_skip_blocker_trigger,AddOutput,maxs 360 319 664,0,-1"
+;	"OnMapSpawn" "house_skip_blocker_trigger,AddOutput,boxmins -360 -319 -664,0,-1"
+;	"OnMapSpawn" "house_skip_blocker_trigger,AddOutput,boxmaxs 360 319 664,0,-1"
+;	"OnMapSpawn" "house_skip_blocker_trigger,AddOutput,solid 2,0,-1"
+;}
+;{
+;	"classname" "trigger_multiple"
+;	"origin" "-1112 6624 168"
+;	"targetname" "house_skip_blocker_trigger"
+;	"filtername" "filter_survivor"
+;	"spawnflags" "1"
+;	"OnTrigger" "house_skip_blocker,Disable,,0,-1"
+;	"OnNotTouching" "house_skip_blocker,Enable,,0,-1"
+;}
+;{
+;	"classname" "filter_activator_team"
+;	"targetname" "filter_survivor"
+;	"Negated" "Allow entities that match criteria"
+;	"filterteam" "2"
+;}
+;{
+;	"classname" "logic_timer"
+;	"targetname" "house_skip_blocker_timer"
+;	"RefireTime" "2"
+;	"OnTimer" "house_skip_blocker_trigger,TouchTest,,0,-1"
+;}
 ; --- Block survivors jumping on a log pile to get on the roof and skip going through the first floor of the house
 {
 	"classname" "env_physics_blocker"
@@ -885,6 +885,23 @@ add:
 	"origin" "-1762 5312 239"
 	"mins" "-254 -168 -593"
 	"maxs" "254 168 593"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block survivors from going back over the log pile after the one way drop
+{
+	"classname" "prop_dynamic"
+	"origin" "-1109 6304 -485"
+	"angles" "0 90.5 0"
+	"model" "models/props/cs_militia/logpile2.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1139 6333.5 168"
+	"mins" "-102 -27.5 -664"
+	"maxs" "102 27.5 664"
 	"initialstate" "1"
 	"BlockType" "1"
 }
